--- a/src/Title/Title.Module.css
+++ b/src/Title/Title.Module.css
@@ -2,5 +2,25 @@
 .title {
     font-family: 'Roboto', sans-serif;
     font-size: 4em;
-    
+    color: white;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%,0);
+    width: 100%;
+    margin-bottom: 50px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0.67em;
+    padding-bottom: 0.67em;
+}
+
+@media (max-width: 768px) {
+    .grid {
+        column-gap: 10px;
+        column-count: 1;
+        padding: 175px 5px 10px 5px;
+    }
+    .title {
+        font-size: 3em;
+    }
 }
